--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
 		"request":"2.37.0"
   },
 	"scripts":{
-		"postinstall":"bower install"
+		"postinstall":"./node_modules/bower/bin/bower install"
 	}
 }
